--- a/melos.yaml
+++ b/melos.yaml
@@ -12,24 +12,25 @@ command:
       sdk: ^3.4.1
       flutter: ^3.22.1
     dependencies:
-      flutter_hooks: ^0.20.5
-      flutter_riverpod: ^2.5.1
-      freezed_annotation: ^2.4.1
-      hooks_riverpod: ^2.5.1
-      intl: ^0.19.0
-      json_annotation: ^4.8.1
-      riverpod_annotation: ^2.3.5
-      go_router: ^13.0.1
+      collection:
+      flutter_hooks: 
+      freezed_annotation:
+      go_router: ^13.2.1
+      hooks_riverpod: ^3.0.0-dev.3
+      intl: 
+      json_annotation: 
+      logger:
+      riverpod_annotation: ^3.0.0-dev.3
     dev_dependencies:
-      build_runner: ^2.4.7
-      custom_lint: ^0.6.4
-      freezed: ^2.4.7
-      json_serializable: ^6.7.1
-      riverpod_generator: ^2.4.0
-      riverpod_lint: ^2.3.10
-      yumemi_lints: ^2.1.0
-      test: ^1.24.0
-      flutter_gen_runner: ^5.5.0+1
+      build_runner: 
+      custom_lint: 
+      freezed: 
+      json_serializable: 
+      pedantic_mono:
+      riverpod_generator: ^3.0.0-dev.11
+      riverpod_lint: ^3.0.0-dev.4
+      test: 
+      flutter_gen_runner: 
     hooks:
       post: melos run yumemi_lints_update && grind generate-package-labels && grind generate-package-labeler
 
@@ -64,11 +65,6 @@ scripts:
       orderDependents: true
     packageFilters:
       dependsOn: flutter_localizations
-
-  yumemi_lints_update:
-    exec: dart run yumemi_lints update
-    packageFilters:
-      dependsOn: yumemi_lints
 
 ide:
   intellij:
