🔧chore: 利用パッケージの変更

--- a/packages/cores/init/pubspec.yaml
+++ b/packages/cores/init/pubspec.yaml
@@ -14,10 +14,11 @@ dependencies:
     path: ../data
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.5.1
-  shared_preferences: ^2.2.2
+  hooks_riverpod: ^3.0.0-dev.3
+  riverpod_annotation: ^3.0.0-dev.3
 
 dev_dependencies:
-  custom_lint: ^0.6.4
-  riverpod_lint: ^2.3.10
-  yumemi_lints: ^2.1.0
+  custom_lint: 
+  pedantic_mono:
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
