--- a/packages/features/setting/analysis_options.yaml
+++ b/packages/features/setting/analysis_options.yaml
@@ -1,1 +1,19 @@
-include: package:yumemi_lints/flutter/3.22/recommended.yaml
+include: package:pedantic_mono/analysis_options.yaml
+
+linter:
+  rules:
+
+analyzer:
+  plugins:
+    - custom_lint
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+    - "**/*.gform.dart"
+    - "**/firebase_options*.dart"
+    - "*/.github/workflows/flutter_*.yaml"
+    - "*/functions/*.js"
+  errors:
+    invalid_annotation_target: ignore
+    todo: ignore
+    hack: ignore
