--- a/packages/cores/core/pubspec.yaml
+++ b/packages/cores/core/pubspec.yaml
@@ -10,20 +10,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.5.1
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
-  riverpod_annotation: ^2.3.5
-  simple_logger: ^1.9.0+3
-  visibility_detector: 0.4.0+2
+  flutter_hooks:
+  freezed_annotation: 
+  hooks_riverpod: ^3.0.0-dev.3
+  intl: 
+  json_annotation: 
+  riverpod_annotation: ^3.0.0-dev.3
+  simple_logger: 
+  visibility_detector: 
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  custom_lint: ^0.6.4
+  build_runner: 
+  custom_lint: 
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.7
-  json_serializable: ^6.7.1
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.3.10
-  yumemi_lints: ^2.1.0
+  freezed: 
+  json_serializable: 
+  pedantic_mono:
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
+  
