--- a/packages/cores/data/pubspec.yaml
+++ b/packages/cores/data/pubspec.yaml
@@ -10,16 +10,17 @@ environment:
 dependencies:
   cores_core:
     path: ../core
-  dio: ^5.4.0
+  dio: 
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.5.1
-  riverpod_annotation: ^2.3.5
-  shared_preferences: ^2.2.2
+  flutter_hooks:
+  hooks_riverpod: ^3.0.0-dev.3
+  riverpod_annotation: ^3.0.0-dev.3
+  shared_preferences: 
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  custom_lint: ^0.6.4
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.3.10
-  yumemi_lints: ^2.1.0
+  build_runner: 
+  custom_lint: 
+  pedantic_mono:
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
