--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -10,15 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  theme_extensions_builder_annotation: ^3.0.0
+  theme_extensions_builder_annotation: 
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  flutter_gen_runner: ^5.5.0+1
+  build_runner: 
+  flutter_gen_runner: 
   flutter_test:
     sdk: flutter
-  theme_extensions_builder: ^3.0.1
-  yumemi_lints: ^2.1.0
+  pedantic_mono:
+  theme_extensions_builder: 
 
 flutter:
   uses-material-design: true
