--- a/packages/features/setting/pubspec.yaml
+++ b/packages/features/setting/pubspec.yaml
@@ -14,18 +14,19 @@ dependencies:
     path: ../../cores/data
   flutter:
     sdk: flutter
+  flutter_hooks:
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^2.5.1
-  freezed_annotation: ^2.4.1
-  intl: ^0.19.0
-  riverpod_annotation: ^2.3.5
+  hooks_riverpod: ^3.0.0-dev.3
+  intl: 
+  riverpod_annotation: ^3.0.0-dev.3
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  flutter_gen_runner: ^5.5.0+1
-  riverpod_generator: ^2.4.0
-  yumemi_lints: ^2.1.0
+  build_runner: 
+  flutter_gen_runner: 
+  pedantic_mono:
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
 
 flutter:
   uses-material-design: true
