--- a/packages/features/setting/pubspec.yaml
+++ b/packages/features/setting/pubspec.yaml
@@ -19,7 +19,9 @@ dependencies:
     sdk: flutter
   hooks_riverpod: ^3.0.0-dev.3
   intl: 
+  material_design_icons_flutter:
   riverpod_annotation: ^3.0.0-dev.3
+  settings_ui:
 
 dev_dependencies:
   build_runner: 
