--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -28,27 +28,26 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^2.5.1
-  freezed_annotation: ^2.4.1
-  go_router: ^13.0.1
-  intl: ^0.19.0
-  json_annotation: ^4.8.1
+  freezed_annotation: any
+  go_router: ^13.2.1
+  hooks_riverpod: ^3.0.0-dev.3
+  intl: any
+  json_annotation: any
   package_info_plus: ^5.0.1
-  riverpod_annotation: ^2.3.5
+  riverpod_annotation: ^3.0.0-dev.3
 
 dev_dependencies:
-  build_runner: ^2.4.7
+  build_runner: any
   build_verify: ^3.1.0
-  custom_lint: ^0.6.4
+  custom_lint: any
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.7
+  freezed: any
   go_router_builder: ^2.4.1
-  json_serializable: ^6.7.1
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.3.10
-  yumemi_lints: ^2.1.0
+  json_serializable: any
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
 
 flutter:
   uses-material-design: true
