--- a/apps/catalog/pubspec.yaml
+++ b/apps/catalog/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   widgetbook_annotation: ^3.1.0
 
 dev_dependencies:
-  build_runner: ^2.4.7
+  build_runner: any
   widgetbook_generator: ^3.7.0
   yumemi_lints: ^2.1.0
 
