--- a/packages/features/debug_mode/pubspec.yaml
+++ b/packages/features/debug_mode/pubspec.yaml
@@ -17,14 +17,13 @@ dependencies:
   dio: ^5.4.0
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.20.5
-  flutter_riverpod: ^2.5.1
-  go_router: ^13.0.1
-  riverpod_annotation: ^2.3.5
+  flutter_hooks: any
+  go_router: ^13.2.1
+  hooks_riverpod: ^3.0.0-dev.3
+  riverpod_annotation: ^3.0.0-dev.3
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  custom_lint: ^0.6.4
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.3.10
-  yumemi_lints: ^2.1.0
+  build_runner: any
+  custom_lint: any
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
