--- a/packages/features/github_repository/pubspec.yaml
+++ b/packages/features/github_repository/pubspec.yaml
@@ -16,17 +16,16 @@ dependencies:
     path: ../../cores/designsystem
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.20.5
-  freezed_annotation: ^2.4.1
-  hooks_riverpod: ^2.5.1
-  json_annotation: ^4.8.1
-  riverpod_annotation: ^2.3.5
+  flutter_hooks: any
+  freezed_annotation: any
+  hooks_riverpod: ^3.0.0-dev.3
+  json_annotation: any
+  riverpod_annotation: ^3.0.0-dev.3
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  custom_lint: ^0.6.4
-  freezed: ^2.4.7
-  json_serializable: ^6.7.1
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.3.10
-  yumemi_lints: ^2.1.0
+  build_runner: any
+  custom_lint: any
+  freezed: any
+  json_serializable: any
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
