--- a/melos.yaml
+++ b/melos.yaml
@@ -50,7 +50,7 @@ scripts:
     packageFilters:
       dependsOn: custom_lint
 
-  regenerate_code: melos run regenerate_by_using_gen_l10n && melos run regenerate_by_using_build_runner
+  regenerate_code: melos run regenerate_by_using_gen_l10n && melos run regenerate_by_using_build_runner && melos run regenerate_by_using_gen_slang
 
   regenerate_by_using_build_runner:
     run: dart run build_runner build -d
@@ -65,6 +65,13 @@ scripts:
       orderDependents: true
     packageFilters:
       dependsOn: flutter_localizations
+
+  regenerate_by_using_gen_slang:
+    run: dart run slang
+    exec:
+      orderDependents: true
+    packageFilters:
+      dependsOn: slang
 
 ide:
   intellij:
