--- a/melos.yaml
+++ b/melos.yaml
@@ -59,6 +59,13 @@ scripts:
     packageFilters:
       dependsOn: build_runner
 
+  regenerate_watch_by_using_build_runner:
+    run: dart run build_runner watch -d
+    exec:
+      orderDependents: true
+    packageFilters:
+      dependsOn: build_runner
+
   regenerate_by_using_gen_l10n:
     run: flutter gen-l10n
     exec:
