--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hooks_riverpod: ^3.0.0-dev.3
+  riverpod_annotation: ^3.0.0-dev.3
   theme_extensions_builder_annotation: 
 
 dev_dependencies:
@@ -18,6 +20,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic_mono:
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
   theme_extensions_builder: 
 
 flutter:
