--- a/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/pubspec.yaml
+++ b/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/pubspec.yaml
@@ -16,23 +16,23 @@ dependencies:
     path: ../../cores/designsystem
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.20.5
+  flutter_hooks: 
   flutter_localizations:
     sdk: flutter
-  freezed_annotation: ^2.4.1
-  hooks_riverpod: ^2.5.1
-  intl: ^0.19.0
-  riverpod_annotation: ^2.3.5
+  freezed_annotation: 
+  hooks_riverpod: ^3.0.0-dev.3
+  intl: 
+  riverpod_annotation: ^3.0.0-dev.3
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  custom_lint: ^0.6.4
+  build_runner: 
+  custom_lint: 
   flutter_test:
     sdk: flutter
   freezed: ^2.4.7
-  json_serializable: ^6.7.1
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.3.10
-  yumemi_lints: ^2.1.0
+  json_serializable: 
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
+  pedantic_mono: 
 
 flutter:
