--- a/packages/features/setting/pubspec.yaml
+++ b/packages/features/setting/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     path: ../../cores/core
   cores_data:
     path: ../../cores/data
+  cores_designsystem:
+    path: ../../cores/designsystem
   flutter:
     sdk: flutter
   flutter_hooks:
