✨feat: 設定画面に現在の状態を表示するように変更

--- a/packages/cores/designsystem/slang.yaml
+++ b/packages/cores/designsystem/slang.yaml
@@ -8,6 +8,12 @@ namespaces: true
 # Config
 imports:
   - "package:cores_designsystem/src/domain/value_object/ui_style.dart"
+  - "package:cores_designsystem/src/domain/value_object/color_style.dart"
+  - "package:flutter/material.dart"
 contexts:
   UIStyle:
+    generate_enum: false
+  ColorStyle:
+    generate_enum: false
+  ThemeMode:
     generate_enum: false
