--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ^3.22.1
 
 dependencies:
+  collection:
   cores_shared_preferences:
     path: ../shared_preferences
   flutter:
