--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -36,50 +36,46 @@
   description: "This will not be worked on"
 
 # <!-- This is an auto-generated label -->
-- name: "@apps/catalog"
-  color: d4f227
-  description: Catalog development
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\apps\\catalog"
+  color: 05eea6
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\apps\catalog package
 
-- name: "@packages/cores/core"
-  color: 0b2ebd
-  description: packages cores core package
-  from_name: "@cores/core"
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\cores\\core"
+  color: b23ac0
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\core package
 
-- name: "@packages/cores/data"
-  color: 50D413
-  description: packages cores data package
-  from_name: "@cores/data"
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\cores\\data"
+  color: 0f62cd
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\data package
 
-- name: "@packages/cores/designsystem"
-  color: b4cef5
-  description: packages cores designsystem package
-  from_name: "@cores/designsystem"
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\cores\\designsystem"
+  color: 2a260a
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\designsystem package
 
-- name: "@packages/cores/init"
-  color: DC79FD
-  description: packages cores init package
-  from_name: "@cores/init"
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\cores\\init"
+  color: 1f50f8
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\init package
 
-- name: "@packages/features/debug_mode"
-  color: 48360E
-  description: packages features debug_mode package
-  from_name: "@cores/debug"
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\cores\\shared_preferences"
+  color: 434ac7
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\shared_preferences package
 
-- name: "@packages/features/github_repository"
-  color: 3bc0ec
-  description: packages features github_repository package
-  from_name: "@cores/github_repository"
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\debug_mode"
+  color: c0eb5a
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\debug_mode package
 
-- name: "@packages/features/setting"
-  color: 1e266d
-  description: packages features setting package
-  from_name: "@cores/setting"
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\github_repository"
+  color: 8ee8a9
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\github_repository package
 
-- name: "@packages/features/webview"
-  color: 6fe0ba
-  description: packages features webview package
-  from_name: "@cores/webview"
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\setting"
+  color: 7080b0
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\setting package
 
-- name: "@apps/app"
-  color: e261d6
-  description: Application development
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\webview"
+  color: 6c801e
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\webview package
+
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\apps\\app"
+  color: efaf5b
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\apps\app package
