--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   json_annotation: any
   package_info_plus: ^5.0.1
   riverpod_annotation: ^3.0.0-dev.3
+  slang: 
+  slang_flutter: 
 
 dev_dependencies:
   build_runner: any
