--- a/packages/features/setting/pubspec.yaml
+++ b/packages/features/setting/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   riverpod_annotation: ^3.0.0-dev.3
   settings_ui:
   slang: 
+  slang_flutter: 
 
 dev_dependencies:
   build_runner: 
@@ -32,6 +33,7 @@ dev_dependencies:
   pedantic_mono:
   riverpod_generator: ^3.0.0-dev.11
   riverpod_lint: ^3.0.0-dev.4
+  slang_build_runner: 
 
 flutter:
   uses-material-design: true
