--- a/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/pubspec.yaml
+++ b/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   hooks_riverpod: ^3.0.0-dev.3
   intl: 
   riverpod_annotation: ^3.0.0-dev.3
+  slang: 
+  slang_flutter: 
 
 dev_dependencies:
   build_runner: 
@@ -37,5 +39,6 @@ dev_dependencies:
   pedantic_mono: 
   riverpod_generator: ^3.0.0-dev.11
   riverpod_lint: ^3.0.0-dev.4
+  slang_build_runner: 
 
 flutter:
