--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   hooks_riverpod: ^3.0.0-dev.3
   intl: any
   json_annotation: any
+  nested: 
   package_info_plus: ^5.0.1
   riverpod_annotation: ^3.0.0-dev.3
   slang: 
