--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     path: ../../packages/cores/designsystem
   cores_init:
     path: ../../packages/cores/init
+  features_auth:
+    path: ../../packages/features/auth
   features_debug_mode:
     path: ../../packages/features/debug_mode
   features_github_repository:
