--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -52,6 +52,10 @@
   color: 2a260a
   description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\designsystem package
 
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\cores\\firebase"
+  color: 2ed59c
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\firebase package
+
 - name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\cores\\init"
   color: 1f50f8
   description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\init package
