--- a/packages/cores/firebase/pubspec.yaml
+++ b/packages/cores/firebase/pubspec.yaml
@@ -1,29 +1,38 @@
 name: cores_firebase
 description: "A new Flutter package project."
 version: 0.0.1
+publish_to: 'none'
 
 environment:
   sdk: ^3.4.1
   flutter: ^3.22.1
 
 dependencies:
+  cloud_firestore:
+  cloud_functions:
+  collection: 
   cores_core:
     path: ../core
-  cloud_firestore:
-  collection: 
   firebase_analytics:
   firebase_app_check:
   firebase_auth:
   firebase_core:
   firebase_crashlytics:
   firebase_remote_config:
+  firebase_storage:
   flutter:
     sdk: flutter
+  freezed_annotation: 
+  hooks_riverpod: ^3.0.0-dev.3
+  riverpod_annotation: ^3.0.0-dev.3
 
 dev_dependencies:
+  build_runner: 
   flutter_test:
     sdk: flutter
   pedantic_mono: 
+  riverpod_generator: ^3.0.0-dev.11
+  riverpod_lint: ^3.0.0-dev.4
   test: any
 
 flutter:
