--- a/packages/features/github_repository/pubspec.yaml
+++ b/packages/features/github_repository/pubspec.yaml
@@ -27,5 +27,6 @@ dev_dependencies:
   custom_lint: any
   freezed: any
   json_serializable: any
+  pedantic_mono: any
   riverpod_generator: ^3.0.0-dev.11
   riverpod_lint: ^3.0.0-dev.4
