--- a/apps/catalog/pubspec.yaml
+++ b/apps/catalog/pubspec.yaml
@@ -19,8 +19,9 @@ dependencies:
 
 dev_dependencies:
   build_runner: any
+  custom_lint: any
+  pedantic_mono: any
   widgetbook_generator: ^3.7.0
-  yumemi_lints: ^2.1.0
 
 flutter:
   uses-material-design: true
