--- a/packages/features/debug_mode/pubspec.yaml
+++ b/packages/features/debug_mode/pubspec.yaml
@@ -25,5 +25,6 @@ dependencies:
 dev_dependencies:
   build_runner: any
   custom_lint: any
+  pedantic_mono: any
   riverpod_generator: ^3.0.0-dev.11
   riverpod_lint: ^3.0.0-dev.4
