--- a/packages/features/webview/pubspec.yaml
+++ b/packages/features/webview/pubspec.yaml
@@ -14,9 +14,10 @@ dependencies:
   flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
+  custom_lint: any
   flutter_test:
     sdk: flutter
-  yumemi_lints: ^2.1.0
+  pedantic_mono: any
 
 flutter:
   uses-material-design: true
