--- a/packages/features/auth/pubspec.yaml
+++ b/packages/features/auth/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     path: ../../cores/data
   cores_designsystem:
     path: ../../cores/designsystem
+  cores_firebase:
+    path: ../../cores/firebase
   flutter:
     sdk: flutter
   flutter_hooks: 
