--- a/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/build.yaml
+++ b/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/build.yaml
@@ -18,7 +18,7 @@ targets:
       riverpod_generator:
         generate_for:
           include:
-            - lib/{provider,**/provider}/**.dart
+            - lib/**/*provider.dart
       # https://github.com/dart-lang/source_gen#ignore_for_file
       source_gen:combining_builder:
         options:
