--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -43,6 +43,10 @@ labels:
     files:
       - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\setting/.+
 
+  - label: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\user"
+    files:
+      - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\user/.+
+
   - label: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\webview"
     files:
       - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\webview/.+
