--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   riverpod_annotation: ^3.0.0-dev.3
   slang: 
   slang_flutter: 
+  version: 
 
 dev_dependencies:
   build_runner: any
