--- a/packages/cores/core/build.yaml
+++ b/packages/cores/core/build.yaml
@@ -19,6 +19,7 @@ targets:
         generate_for:
           include:
             - lib/**/*provider.dart
+            - lib/**/*repository.dart
       # https://github.com/dart-lang/source_gen#ignore_for_file
       source_gen:combining_builder:
         options:
