--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -39,6 +39,10 @@ labels:
     files:
       - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\github_repository/.+
 
+  - label: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\maintenance"
+    files:
+      - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\maintenance/.+
+
   - label: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\setting"
     files:
       - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\setting/.+
