--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -31,6 +31,10 @@ labels:
     files:
       - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\shared_preferences/.+
 
+  - label: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\app_update"
+    files:
+      - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\app_update/.+
+
   - label: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\debug_mode"
     files:
       - c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\debug_mode/.+
