--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -64,6 +64,10 @@
   color: 434ac7
   description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\cores\shared_preferences package
 
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\app_update"
+  color: 3c8e73
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\app_update package
+
 - name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\debug_mode"
   color: c0eb5a
   description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\debug_mode package
