--- a/packages/features/user/build.yaml
+++ b/packages/features/user/build.yaml
@@ -6,11 +6,13 @@ targets:
         generate_for:
           include:
             - lib/{entity,**/entity}/**.dart
+            - lib/{model,**/model}/**.dart
       # https://github.com/google/json_serializable.dart/tree/master/json_serializable#build-configuration
       json_serializable:
         generate_for:
           include:
             - lib/{entity,**/entity}/**.dart
+            - lib/{model,**/model}/**.dart
         options:
           field_rename: snake
           # json のデシリアライズ時に発生する Exception を CheckedFromJsonException にまとめる
