--- a/packages/features/user/pubspec.yaml
+++ b/packages/features/user/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ^3.22.1
 
 dependencies:
+  cloud_firestore:
   collection:
   cores_core:
     path: ../../cores/core
@@ -15,6 +16,9 @@ dependencies:
     path: ../../cores/data
   cores_designsystem:
     path: ../../cores/designsystem
+  cores_firebase:
+    path: ../../cores/firebase
+  firebase_auth: 
   flutter:
     sdk: flutter
   flutter_hooks: 
