♻️refactor: initパッケージを削除し、各パッケージにinitフォルダを用意

--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
     path: ../../packages/cores/designsystem
   cores_firebase:
     path: ../../packages/cores/firebase
-  cores_init:
-    path: ../../packages/cores/init
+  cores_shared_preferences:
+    path: ../../packages/cores/shared_preferences
   features_app_update:
     path: ../../packages/features/app_update
   features_debug_mode:
