--- a/packages/features/user/build.yaml
+++ b/packages/features/user/build.yaml
@@ -22,6 +22,7 @@ targets:
           include:
             - lib/**/*provider.dart
             - lib/{interface,**/interface}/*repository.dart
+            - lib/{usecase,**/usecase}/*usecase.dart
       # https://github.com/dart-lang/source_gen#ignore_for_file
       source_gen:combining_builder:
         options:
