--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -8,19 +8,27 @@ environment:
   flutter: ^3.22.1
 
 dependencies:
+  animations:
   collection:
   cores_shared_preferences:
     path: ../shared_preferences
   dynamic_color:
   flutter:
     sdk: flutter
+  flutter_hooks:
+  flutter_svg:
+  freezed_annotation: 
+  gap: 
+  gauge_indicator: 
   hooks_riverpod: ^3.0.0-dev.3
   material_color_utilities:
   nested: 
   riverpod_annotation: ^3.0.0-dev.3
+  shimmer:
   slang: 
   slang_flutter: 
   theme_extensions_builder_annotation: 
+  url_launcher:
 
 dev_dependencies:
   build_runner: 
