--- a/packages/features/user/pubspec.yaml
+++ b/packages/features/user/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
     path: ../../cores/designsystem
   cores_firebase:
     path: ../../cores/firebase
+  features_setting:
+    path: ../../features/setting
   firebase_auth: 
   flutter:
     sdk: flutter
@@ -25,8 +27,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   freezed_annotation: 
+  gap: 
   hooks_riverpod: ^3.0.0-dev.3
   intl: 
+  material_design_icons_flutter:
   nested: 
   riverpod_annotation: ^3.0.0-dev.3
   slang: 
@@ -35,6 +39,7 @@ dependencies:
 dev_dependencies:
   build_runner: 
   custom_lint: 
+  flutter_gen_runner:
   flutter_test:
     sdk: flutter
   freezed: any
@@ -45,3 +50,6 @@ dev_dependencies:
   slang_build_runner: 
 
 flutter:
+  # Assets & Fonts
+  assets:
+    - assets/images/
