🐛fix: ルーティングの定義ミスを修正

--- a/apps/app/build.yaml
+++ b/apps/app/build.yaml
@@ -25,3 +25,7 @@ targets:
           ignore_for_file:
             - type=lint
             - duplicate_ignore
+      go_router_builder:
+        generate_for:
+          include:
+            - lib/**/router/**/**.dart
