--- a/packages/features/user/pubspec.yaml
+++ b/packages/features/user/pubspec.yaml
@@ -53,3 +53,9 @@ flutter:
   # Assets & Fonts
   assets:
     - assets/images/
+
+flutter_gen:
+  output: lib/src/gen/assets
+  assets:
+    outputs:
+      package_parameter_enabled: true
