--- a/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/pubspec.yaml
+++ b/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/pubspec.yaml
@@ -41,3 +41,10 @@ dev_dependencies:
   slang_build_runner: 
 
 flutter:
+
+# パッケージ内でのみ利用するAssetsは下記の指定が必要
+# flutter_gen:
+#   output: lib/src/gen/assets
+#   assets:
+#     outputs:
+#       package_parameter_enabled: true
