♻️refactor: ローディング表示をWidget内で状態監視も行うように変更

--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   animations:
   collection:
+  cores_core:
+    path: ../core
   cores_shared_preferences:
     path: ../shared_preferences
   dynamic_color:
