--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     path: ../../packages/cores/data
   cores_designsystem:
     path: ../../packages/cores/designsystem
+  cores_error:
+    path: ../../packages/cores/error
   cores_firebase:
     path: ../../packages/cores/firebase
   cores_shared_preferences:
