--- a/packages/cores/error/pubspec.yaml
+++ b/packages/cores/error/pubspec.yaml
@@ -1,6 +1,5 @@
-name: cores_designsystem
-description: "This package provides style definitions, themes, etc."
-publish_to: "none"
+name: cores_error
+description: "A new Flutter package project."
 version: 0.0.1
 
 environment:
@@ -8,29 +7,20 @@ environment:
   flutter: ^3.22.1
 
 dependencies:
-  animations:
   collection:
   cores_core:
     path: ../core
-  cores_shared_preferences:
-    path: ../shared_preferences
-  dynamic_color:
   flutter:
     sdk: flutter
   flutter_hooks:
   flutter_svg:
   freezed_annotation: 
   gap: 
-  gauge_indicator: 
   hooks_riverpod: ^3.0.0-dev.3
-  material_color_utilities:
   nested: 
   riverpod_annotation: ^3.0.0-dev.3
-  shimmer:
   slang: 
   slang_flutter: 
-  theme_extensions_builder_annotation: 
-  url_launcher:
 
 dev_dependencies:
   build_runner: 
@@ -45,13 +35,3 @@ dev_dependencies:
   theme_extensions_builder: 
 
 flutter:
-  uses-material-design: true
-
-  assets:
-    - assets/
-
-flutter_gen:
-  output: lib/src/gen/assets
-  assets:
-    outputs:
-      package_parameter_enabled: true
