✨feat: エラー機能追加
- AppException関連の機能をエラー機能に移動

--- a/packages/features/debug_mode/pubspec.yaml
+++ b/packages/features/debug_mode/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     path: ../../cores/data
   cores_designsystem:
     path: ../../cores/designsystem
+  cores_error:
+    path: ../../cores/error
   dio: ^5.4.0
   flutter:
     sdk: flutter
