--- a/packages/cores/core/pubspec.yaml
+++ b/packages/cores/core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cores_core
 description: "This package provides core features of app."
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.1
 
 environment:
@@ -8,29 +8,28 @@ environment:
   flutter: ^3.22.1
 
 dependencies:
-  cores_firebase:
-    path: ../firebase
+  cores_error:
+    path: ../error
   flutter:
     sdk: flutter
   flutter_hooks:
-  freezed_annotation: 
+  freezed_annotation:
   hooks_riverpod: ^3.0.0-dev.3
-  intl: 
-  json_annotation: 
+  intl:
+  json_annotation:
   logger:
-  nested: 
+  nested:
   riverpod_annotation: ^3.0.0-dev.3
-  version: 
-  visibility_detector: 
+  version:
+  visibility_detector:
 
 dev_dependencies:
-  build_runner: 
-  custom_lint: 
+  build_runner:
+  custom_lint:
   flutter_test:
     sdk: flutter
-  freezed: 
-  json_serializable: 
+  freezed:
+  json_serializable:
   pedantic_mono:
   riverpod_generator: ^3.0.0-dev.11
   riverpod_lint: ^3.0.0-dev.4
-  
