--- a/packages/cores/data/pubspec.yaml
+++ b/packages/cores/data/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   cores_core:
     path: ../core
+  cores_error:
+    path: ../error
   dio: 
   flutter:
     sdk: flutter
