--- a/apps/app/android/app/build.gradle
+++ b/apps/app/android/app/build.gradle
@@ -88,11 +88,22 @@ android {
         resValue "string", "app_name","${dartDefines.appName}"
     }
 
+    signingConfigs {
+        // `key.properties`の内容を設定
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.release
         }
     }
 }
