--- a/packages/cores/error/pubspec_overrides.yaml
+++ b/packages/cores/error/pubspec_overrides.yaml
@@ -1,6 +1,4 @@
-# melos_managed_dependency_overrides: cores_core,cores_firebase
+# melos_managed_dependency_overrides: cores_core
 dependency_overrides:
   cores_core:
     path: ..\\core
-  cores_firebase:
-    path: ..\\firebase
