--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -72,6 +72,10 @@
   color: ffefea
   description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\maintenance package
 
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\sample_list"
+  color: 6ff523
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\sample_list package
+
 - name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\setting"
   color: 7080b0
   description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\setting package
