--- a/packages/cores/error/pubspec.yaml
+++ b/packages/cores/error/pubspec.yaml
@@ -17,9 +17,9 @@ dependencies:
   flutter_svg:
   freezed_annotation: 
   gap: 
-  hooks_riverpod: ^3.0.0-dev.3
+  hooks_riverpod: 
   nested: 
-  riverpod_annotation: ^3.0.0-dev.3
+  riverpod_annotation: 
   slang: 
   slang_flutter: 
 
@@ -30,8 +30,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic_mono:
-  riverpod_generator: ^3.0.0-dev.11
-  riverpod_lint: ^3.0.0-dev.4
+  riverpod_generator: 
+  riverpod_lint: 
   slang_build_runner: 
   theme_extensions_builder: 
 
