--- a/packages/cores/shared_preferences/pubspec.yaml
+++ b/packages/cores/shared_preferences/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  hooks_riverpod: ^3.0.0-dev.3
-  riverpod_annotation: ^3.0.0-dev.3
+  hooks_riverpod: 
+  riverpod_annotation: 
   shared_preferences: 
 
 dev_dependencies:
@@ -19,8 +19,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic_mono:
-  riverpod_generator: ^3.0.0-dev.11
-  riverpod_lint: ^3.0.0-dev.4
+  riverpod_generator: 
+  riverpod_lint: 
   test: any
 
 flutter:
