--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -39,12 +39,12 @@ dependencies:
   freezed_annotation: any
   gap: any
   go_router: ^13.2.1
-  hooks_riverpod: ^3.0.0-dev.3
+  hooks_riverpod: 
   intl: any
   json_annotation: any
   nested: 
   package_info_plus: ^5.0.1
-  riverpod_annotation: ^3.0.0-dev.3
+  riverpod_annotation: 
   slang: 
   slang_flutter: 
   version: 
@@ -60,8 +60,8 @@ dev_dependencies:
   go_router_builder: ^2.4.1
   json_serializable: any
   pedantic_mono: any
-  riverpod_generator: ^3.0.0-dev.11
-  riverpod_lint: ^3.0.0-dev.4
+  riverpod_generator: 
+  riverpod_lint: 
 
 flutter:
   uses-material-design: true
