--- a/melos.yaml
+++ b/melos.yaml
@@ -16,19 +16,19 @@ command:
       flutter_hooks: 
       freezed_annotation:
       go_router: ^13.2.1
-      hooks_riverpod: ^3.0.0-dev.3
+      hooks_riverpod: 
       intl: 
       json_annotation: 
       logger:
-      riverpod_annotation: ^3.0.0-dev.3
+      riverpod_annotation: 
     dev_dependencies:
       build_runner: 
       custom_lint: 
       freezed: 
       json_serializable: 
       pedantic_mono:
-      riverpod_generator: ^3.0.0-dev.11
-      riverpod_lint: ^3.0.0-dev.4
+      riverpod_generator: 
+      riverpod_lint: 
       test: 
       flutter_gen_runner: 
     hooks:
