--- a/packages/cores/data/pubspec.yaml
+++ b/packages/cores/data/pubspec.yaml
@@ -16,13 +16,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks:
-  hooks_riverpod: ^3.0.0-dev.3
-  riverpod_annotation: ^3.0.0-dev.3
+  hooks_riverpod: 
+  riverpod_annotation: 
   shared_preferences: 
 
 dev_dependencies:
   build_runner: 
   custom_lint: 
   pedantic_mono:
-  riverpod_generator: ^3.0.0-dev.11
-  riverpod_lint: ^3.0.0-dev.4
+  riverpod_generator: 
+  riverpod_lint: 
