--- a/packages/cores/firebase/pubspec.yaml
+++ b/packages/cores/firebase/pubspec.yaml
@@ -24,16 +24,16 @@ dependencies:
     sdk: flutter
   freezed_annotation: 
   google_sign_in: 
-  hooks_riverpod: ^3.0.0-dev.3
-  riverpod_annotation: ^3.0.0-dev.3
+  hooks_riverpod: 
+  riverpod_annotation: 
 
 dev_dependencies:
   build_runner: 
   flutter_test:
     sdk: flutter
   pedantic_mono: 
-  riverpod_generator: ^3.0.0-dev.11
-  riverpod_lint: ^3.0.0-dev.4
+  riverpod_generator: 
+  riverpod_lint: 
   test: any
 
 flutter:
