--- a/packages/features/maintenance/pubspec.yaml
+++ b/packages/features/maintenance/pubspec.yaml
@@ -23,10 +23,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   freezed_annotation: 
-  hooks_riverpod: ^3.0.0-dev.3
+  hooks_riverpod: 
   intl: 
   nested: 
-  riverpod_annotation: ^3.0.0-dev.3
+  riverpod_annotation: 
   slang: 
   slang_flutter: 
 
@@ -38,8 +38,8 @@ dev_dependencies:
   freezed: any
   json_serializable: 
   pedantic_mono: 
-  riverpod_generator: ^3.0.0-dev.11
-  riverpod_lint: ^3.0.0-dev.4
+  riverpod_generator: 
+  riverpod_lint: 
   slang_build_runner: 
 
 flutter:
