--- a/packages/features/setting/pubspec.yaml
+++ b/packages/features/setting/pubspec.yaml
@@ -24,11 +24,11 @@ dependencies:
   flutter_hooks:
   flutter_localizations:
     sdk: flutter
-  hooks_riverpod: ^3.0.0-dev.3
+  hooks_riverpod: 
   intl: 
   material_design_icons_flutter:
   nested: 
-  riverpod_annotation: ^3.0.0-dev.3
+  riverpod_annotation: 
   settings_ui:
   slang: 
   slang_flutter: 
@@ -37,8 +37,8 @@ dev_dependencies:
   build_runner: 
   flutter_gen_runner: 
   pedantic_mono:
-  riverpod_generator: ^3.0.0-dev.11
-  riverpod_lint: ^3.0.0-dev.4
+  riverpod_generator: 
+  riverpod_lint: 
   slang_build_runner: 
 
 flutter:
