--- a/packages/features/user/pubspec.yaml
+++ b/packages/features/user/pubspec.yaml
@@ -30,11 +30,11 @@ dependencies:
     sdk: flutter
   freezed_annotation: 
   gap: 
-  hooks_riverpod: ^3.0.0-dev.3
+  hooks_riverpod: 
   intl: 
   material_design_icons_flutter:
   nested: 
-  riverpod_annotation: ^3.0.0-dev.3
+  riverpod_annotation: 
   slang: 
   slang_flutter: 
 
@@ -47,8 +47,8 @@ dev_dependencies:
   freezed: any
   json_serializable: 
   pedantic_mono: 
-  riverpod_generator: ^3.0.0-dev.11
-  riverpod_lint: ^3.0.0-dev.4
+  riverpod_generator: 
+  riverpod_lint: 
   slang_build_runner: 
 
 flutter:
