--- a/packages/features/user/pubspec.yaml
+++ b/packages/features/user/pubspec.yaml
@@ -1,6 +1,6 @@
 name: features_user
 description: "This package provides user features."
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.1
 
 environment:
@@ -22,35 +22,34 @@ dependencies:
     path: ../../cores/firebase
   features_setting:
     path: ../../features/setting
-  firebase_auth: 
+  firebase_auth:
   flutter:
     sdk: flutter
-  flutter_hooks: 
+  flutter_hooks:
   flutter_localizations:
     sdk: flutter
-  freezed_annotation: 
-  gap: 
-  hooks_riverpod: 
-  intl: 
+  freezed_annotation:
+  gap:
+  hooks_riverpod:
+  intl:
   material_design_icons_flutter:
-  nested: 
-  riverpod_annotation: 
-  riverpod_paging_utils:
-  slang: 
-  slang_flutter: 
+  nested:
+  riverpod_annotation:
+  slang:
+  slang_flutter:
 
 dev_dependencies:
-  build_runner: 
-  custom_lint: 
+  build_runner:
+  custom_lint:
   flutter_gen_runner:
   flutter_test:
     sdk: flutter
   freezed: any
-  json_serializable: 
-  pedantic_mono: 
-  riverpod_generator: 
-  riverpod_lint: 
-  slang_build_runner: 
+  json_serializable:
+  pedantic_mono:
+  riverpod_generator:
+  riverpod_lint:
+  slang_build_runner:
 
 flutter:
   # Assets & Fonts
