--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,9 @@
     "editor.suggestSelection": "recentlyUsedByPrefix",
     "editor.tabCompletion": "onlySnippets",
     "editor.wordBasedSuggestions": "off",
-    "editor.rulers": [80],
+    "editor.rulers": [
+      80
+    ],
     "editor.codeActionsOnSave": {
       "source.fixAll": "explicit",
       "source.organizeImports": "explicit",
@@ -34,7 +36,7 @@
     "*.dart": "$(capture).g.dart, $(capture).freezed.dart, $(capture).gform.dart",
     "*_en.i18n.yaml": "$(capture)_*.i18n.yaml"
   },
-  "dart.flutterSdkPath": ".fvm/flutter_sdk",
+  "dart.flutterSdkPath": ".fvm/versions/3.24.0",
   "dart.sdkPath": ".fvm/flutter_sdk/bin/cache/dart-sdk",
   "github.copilot.enable": {
     "*": false
@@ -52,7 +54,9 @@
   "[markdown]": {
     "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
   },
-  "vscodeGitCommit.template": ["{prefix}: {message}"],
+  "vscodeGitCommit.template": [
+    "{prefix}: {message}"
+  ],
   "vscodeGitCommit.variables": {
     "prefix": "aliasesType",
     "aliasesType": [
