--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -4,8 +4,8 @@ publish_to: 'none'
 version: 0.0.1
 
 environment:
-  sdk: ^3.4.1
-  flutter: ^3.22.1
+  sdk: ^3.5.0
+  flutter: ^3.24.0
 
 dependencies:
   cores_core:
@@ -38,7 +38,7 @@ dependencies:
     sdk: flutter
   freezed_annotation: any
   gap: any
-  go_router: ^13.2.1
+  go_router: any
   hooks_riverpod: 
   intl: any
   json_annotation: any
