--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -4,10 +4,11 @@ publish_to: "none"
 version: 0.0.1
 
 environment:
-  sdk: ^3.4.1
-  flutter: ^3.22.1
+  sdk: ^3.5.0
+  flutter: ^3.24.0
 
 dependencies:
+  adaptive_dialog:
   animations:
   collection:
   cores_core:
