--- a/packages/cores/core/pubspec.yaml
+++ b/packages/cores/core/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
     sdk: flutter
   freezed:
   json_serializable:
+  nilts: any
   pedantic_mono:
   riverpod_generator: 
   riverpod_lint: 
