--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed:
+  nilts: any
   pedantic_mono:
   riverpod_generator: 
   riverpod_lint: 
