--- a/packages/cores/firebase/pubspec.yaml
+++ b/packages/cores/firebase/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
   build_runner: 
   flutter_test:
     sdk: flutter
+  nilts: any
   pedantic_mono: 
   riverpod_generator: 
   riverpod_lint: 
