--- a/packages/cores/shared_preferences/pubspec.yaml
+++ b/packages/cores/shared_preferences/pubspec.yaml
@@ -18,9 +18,8 @@ dev_dependencies:
   custom_lint: 
   flutter_test:
     sdk: flutter
+  nilts: any
   pedantic_mono:
   riverpod_generator: 
   riverpod_lint: 
   test: any
-
-flutter:
