--- a/packages/features/maintenance/pubspec.yaml
+++ b/packages/features/maintenance/pubspec.yaml
@@ -37,9 +37,8 @@ dev_dependencies:
     sdk: flutter
   freezed: any
   json_serializable: 
+  nilts: any
   pedantic_mono: 
   riverpod_generator: 
   riverpod_lint: 
   slang_build_runner: 
-
-flutter:
