--- a/packages/features/setting/pubspec.yaml
+++ b/packages/features/setting/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
 dev_dependencies:
   build_runner: 
   flutter_gen_runner: 
+  nilts: any
   pedantic_mono:
   riverpod_generator: 
   riverpod_lint: 
