--- a/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/pubspec.yaml
+++ b/tools/bricks/features_package_core/__brick__/packages/features/{{feature_name.snakeCase()}}/pubspec.yaml
@@ -35,12 +35,11 @@ dev_dependencies:
     sdk: flutter
   freezed: ^2.4.7
   json_serializable: 
+  nilts: any
   pedantic_mono: 
   riverpod_generator: 
   riverpod_lint: 
   slang_build_runner: 
-
-flutter:
 
 # パッケージ内でのみ利用するAssetsは下記の指定が必要
 # flutter_gen:
