--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -68,13 +68,13 @@
   color: 3c8e73
   description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\app_update package
 
+- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\goods"
+  color: 9807cc
+  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\goods package
+
 - name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\maintenance"
   color: ffefea
   description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\maintenance package
-
-- name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\sample_list"
-  color: 6ff523
-  description: c:\users\s-takehara\ghq\github.com\yakitama5\flutter-template\packages\features\sample_list package
 
 - name: "@c:\\users\\s-takehara\\ghq\\github.com\\yakitama5\\flutter-template\\packages\\features\\setting"
   color: 7080b0
