🎨design: 商品明細ページを作成

--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   gap: 
   gauge_indicator: 
   hooks_riverpod: 
+  linked_scroll_controller: 
   material_color_utilities:
   nested: 
   riverpod_annotation: 
