🔧chore: Linterの設定が煩雑であるため、ルート定義に変更

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,7 @@ analyzer:
     - "**/*.freezed.dart"
     - "**/*.gform.dart"
     - "**/firebase_options*.dart"
+    - "tools/**"
     - "*/.github/workflows/flutter_*.yaml"
     - "*/functions/*.js"
   errors:
